Add fixes for lf-release-jobs
- Add missing scm block in gerrit-releases-merge job definition.
- Add missing submodule-disable for jobs using lf-infra-gerrit-scm.
- Add missing submodule-timeout in lf-releases-merge
- Update "Optional parameters" documentation for gerrit-releases-merge
  and gerrit-releases-verify.

Issue: RELENG-1657
Change-Id: I656fe6d27773022581cba9d8bb6c448ba97cf8e5
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/lf-release-jobs.yaml
+++ b/jjb/lf-release-jobs.yaml
@@ -65,6 +65,7 @@
     disable-job: false
     git-url: '$GIT_URL/$PROJECT'
     project-pattern: '**'
+    submodule-disable: false
     submodule-recursive: true
     submodule-timeout: 10
     gerrit-skip-vote: false
@@ -111,6 +112,7 @@
           git-url: '{git-url}'
           refspec: '$GERRIT_REFSPEC'
           branch: 'master'
+          submodule-disable: '{submodule-disable}'
           submodule-recursive: '{submodule-recursive}'
           submodule-timeout: '{submodule-timeout}'
           choosing-strategy: gerrit
@@ -151,7 +153,9 @@
     build-timeout: 15
     disable-job: false
     project-pattern: '**'
+    submodule-disable: false
     submodule-recursive: true
+    submodule-timeout: 10
 
     gerrit_merge_triggers:
       - change-merged-event
@@ -184,6 +188,17 @@
     <<: *lf_releases_common
     # yamllint disable-line rule:key-duplicates
     <<: *lf_releases_merge
+
+    scm:
+      - lf-infra-gerrit-scm:
+          jenkins-ssh-credential: '{jenkins-ssh-credential}'
+          git-url: '{git-url}'
+          refspec: '$GERRIT_REFSPEC'
+          branch: '$GERRIT_BRANCH'
+          submodule-disable: '{submodule-disable}'
+          submodule-recursive: '{submodule-recursive}'
+          submodule-timeout: '{submodule-timeout}'
+          choosing-strategy: default
 
     triggers:
       - gerrit:
