Self serve release docs
I realized I have gaps as we need a
diffrent credential-id for the merge job

Pushing early to see If I am on the right track

ISSUE: RELENG-2127

Signed-off-by: Aric Gardner <agardner@linuxfoundation.org>
Change-Id: I11ad122153d71a3d25d6b8839e09435f8b27b19d

--- a/.jjb-test/defaults.yaml
+++ b/.jjb-test/defaults.yaml
@@ -4,6 +4,7 @@
 
     # General
     jenkins-ssh-credential: test-credential
+    jenkins-ssh-release-credential: test-credential
 
     # Gerrit Infra
     gerrit-server-name: test-server
