Add {stream} to releases jobs
Add the {stream} variable to the verify and merge
releases jobs to make them:
{project-name}-releases-verfy-{stream} and
{project-name}-releases-merge-{stream}

Change-Id: I63dcd51ea5d6eaf2eb57442f72f7e2f339070a7d
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/lf-release-jobs.yaml
+++ b/jjb/lf-release-jobs.yaml
@@ -98,7 +98,7 @@
       - lf-releases
 
 - job-template:
-    name: '{project-name}-releases-verify'
+    name: '{project-name}-releases-verify-{stream}'
     id: gerrit-releases-verify
     <<: *lf_releases_common
     # yamllint disable-line rule:key-duplicates
@@ -177,7 +177,7 @@
       - lf-releases
 
 - job-template:
-    name: '{project-name}-releases-merge'
+    name: '{project-name}-releases-merge-{stream}'
     id: gerrit-releases-merge
     <<: *lf_releases_common
     # yamllint disable-line rule:key-duplicates
