Fix releases-merge job
Add missing git-url variable in {project-name}-releases-merge-{stream}
job.

Change-Id: I8888b6fce6049de252e537c140c542c2945b3ff1
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/lf-release-jobs.yaml
+++ b/jjb/lf-release-jobs.yaml
@@ -149,6 +149,7 @@
     build-days-to-keep: 7
     build-timeout: 15
     disable-job: false
+    git-url: '$GIT_URL/$PROJECT'
     project-pattern: '**'
 
     gerrit_merge_triggers:
