--- a/jjb/lf-macros.yaml
+++ b/jjb/lf-macros.yaml
@@ -281,6 +281,15 @@
       - shell: !include-raw: ../shell/release-job.sh
 
 - builder:
+    name: lf-releases-docker
+    builders:
+      - config-file-provider:
+          files:
+            - file-id: lftoolsini
+              target: '$HOME/.config/lftools/lftools.ini'
+      - shell: !include-raw: ../shell/release-docker-job.sh
+
+- builder:
     name: lf-sigul-sign-dir
     # Requires that Jenkins be configured with SIGUL_BRIDGE_IP as a global
     # Environment variable
