Standardize "release" wording
Using "releases" and "release" in different places
is becoming a little confusing. Standardize to "release"
to match lftools command and the majority of the exisiting
wording.
Using "releases" for the list of tech team releases does
makes sense to be kept that way, for example:
releases/1.1.1.yaml

Issue: RELENG-2131
Change-Id: I9a9a548947cc1acbe3e61bb8fa6532a89fb17e16
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/.jjb-test/lf-release-jobs.yaml
+++ b/.jjb-test/lf-release-jobs.yaml
@@ -1,6 +1,6 @@
 ---
 - project:
-    name: '{project-name}-releases'
+    name: '{project-name}-release'
     jobs:
       - '{project-name}-gerrit-release-jobs'
 
