Use prettier for automatic formatting for YAML
No more debate on style formatting, prettier is an opinionated
style formatter that will automatically format to the right
style.

Signed-off-by: Thanh Ha <zxiiro@gmail.com>
Change-Id: If9aae2087c3299ae5d54728cd17d86c2b0dcb8a0

--- a/tox.ini
+++ b/tox.ini
@@ -6,8 +6,9 @@ envlist =
   jjb,
   jjb-compare-xml,
   jjb-latest,
-  jjb-version
-  license
+  jjb-version,
+  license,
+  pre-commit
 skipsdist = true
 passenv = TOX_WORK_DIR
 toxworkdir = {env:TOX_WORK_DIR:/tmp/v}
@@ -62,6 +63,11 @@ commands = python {toxinidir}/check_jjb_version.py
 [testenv:license]
 deps = lftools
 commands = lftools license check-dir -r '.+' shell
+
+[testenv:pre-commit]
+deps = pre-commit
+commands =
+    pre-commit run --all-files
 
 #########
 # Tools #
